<resources>
    <string name="app_name">OK-FOOD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ok_food_app_name">OK-FOOD</string>
    <string name="ok_food_logo_description">Ok-Food Burger</string>
    <string name="login_as_admin_button">Login as Admin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_makanan">Makanan</string>
    <string name="tab_minuman">Minuman</string>
    <string name="paket_kenyang">paket kenyang</string>
    <string name="nasi_ayam_telor_sayur_nangka_sambal">nasi, ayam, telor, sayur nangka, sambal</string>
    <string name="rp_20_000">Rp. 20.000</string>
    <string name="es_coklat_kocok">Es Coklat Kocok</string>
    <string name="susu_coklat_kocok_nikmat_dingin_disuana_yang_panas">susu coklat kocok, nikmat dingin, disuana yang panas</string>
    <string name="rp_10_000">Rp. 10.000</string>
    <string name="buy">buy</string>


    <string name="app_web_client_id">347959579717-7d0vnt8f6or0sn39us220lnq4j38amjs.apps.googleusercontent.com</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_profil">ProfilActivity</string>
    <string name="gambar_di_string_title_activity_profil">gambar di @string/title_activity_profil</string>
    <string name="udin_kahuripan">Udin Kahuripan</string>
    <string name="set_your_location">SET LOCATION</string>
    <string name="your_location">your location</string>

    <string name="ok_order">OK - Order</string>
    <string name="thank_you">Thank You!</string>
    <string name="order_confirmed_text">Your order is confirmed</string>
    <string name="order_confirmed_img_desc">Order Processed!</string>
  
    <string name="you_have">You have</string>
    <string name="_1_reward">1 reward</string>
    <string name="please_press_shake_to_get_your_merchandise">Please press shake to get your merchandise</string>
    <string name="location_service_warning">please allow location permission for this app on your android, thanks :)</string>

</resources>
