<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_profile"
        android:onClick="clickprofile"
        app:showAsAction="ifRoom"
        android:orderInCategory="20"/>
    <item
        android:id="@+id/cart"
        android:title="@string/menu_cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="always"
        android:orderInCategory="10"
        android:onClick="orderNow"/>

    <item
        android:id="@+id/reward"
        android:title="Reward"
        android:icon="@drawable/ic_reward"
        app:showAsAction="always"
        android:orderInCategory="30"
        android:onClick="rewards"/>

    <item
        android:id="@+id/logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom"
        android:orderInCategory="40"
        android:onClick="signOut"/>

</menu>