<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="221dp"
                app:srcCompat="@drawable/background" />

            <TextView
                android:id="@+id/ini_nama"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:text="@string/udin_kahuripan"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:fontFamily="sans-serif-thin" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:text="@string/your_location"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="206dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bgbtn"
                android:onClick="setLocation"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/set_your_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />
        </LinearLayout>


    </ScrollView>



</android.support.constraint.ConstraintLayout>