<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">


    <ImageView
        android:id="@+id/gambar_makanan"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:src="@drawable/nasi_padang_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/paket_kenyang"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/food_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nasi_ayam_telor_sayur_nangka_sambal" />

        <TextView
            android:id="@+id/food_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rp_20_000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true">

            <Button
                android:id="@+id/button_minus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/bgbtn"
                android:text="-" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="0"/>

            <Button
                android:id="@+id/button_plus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/bgbtn"
                android:layout_marginStart="8dp"
                android:text="+"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bgbtn"
            android:text="\?"
            android:id="@+id/search"/>
    </LinearLayout>


</LinearLayout>